[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "eclean-kernel"
authors = [{name = "Michał Górny", email = "mgorny@gentoo.org"}]
license = {text = "GPL-2.0-or-later"}
readme = "README.rst"
dynamic = ["version", "description"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Installation/Setup"
]
requires-python = ">=3.9"
dependencies = [
    "distro"
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/projg2/eclean-kernel/"

[project.scripts]
eclean-kernel = "ecleankernel.__main__:setuptools_main"

[tool.flit.module]
name = "ecleankernel"

[tool.flit.sdist]
include = [
    "tox.ini",
    "test/*.py",
]

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "lz4.*",
    "lzo.*",
    "pymountboot.*",
    "zstandard.*",
]
ignore_missing_imports = true
